--- a/style.css
+++ b/style.css
@@ -2,3 +2,4 @@
 p.moveinfo{
   display: block;
 }
+background-image: url(http://fc06.deviantart.net/fs70/f/2013/338/a/5/palkia____dat_face_by_akirafuijwara-d6wq05t.jpg)
