--- a/style.css
+++ b/style.css
@@ -7,4 +7,7 @@ input.evs {
   width: 4em;
   border-radius: 4px;
   border: 1px solid #bbb;
+  text-align: center;
+  padding: 3px;
+  box-shadow: inset 0 0 8px #EAEAEA;
 }
